update:implement task 3 cheating mode

--- a/task2/backend/appsettings.json
+++ b/task2/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MAXIMUM_TRIALS": "3",
-  "WORDS": "apple, girls, sunny",
+  "MAXIMUM_TRIALS": "6",
+  "WORDS": "HELLO, WORLD, QUITE, FANCY, FRESH, PANIC, CRAZY, BUGGY",
   "SESSION_TIMEOUT_MINUTES": "30"
 }
